--- a/index.html
+++ b/index.html
@@ -42,55 +42,48 @@ header#master-hud-fixed {
 }
 
 /* --- GRILLE PRINCIPALE --- */
+/* --- NOUVELLE STRUCTURE 2 COLONNES --- */
 main {
     display: grid;
-    grid-template-columns: 320px 1fr 320px; /* 3 colonnes standard */
-    gap: 10px;
-    padding: 10px;
+    grid-template-columns: 1fr 380px; /* Carte à gauche, Data à droite */
+    gap: 15px;
+    padding: 15px;
     height: calc(100vh - 60px);
+    box-sizing: border-box;
 }
 
-/* --- PANNEAUX SCIENTIFIQUES --- */
-.panel {
-    background: var(--card);
-    border: 1px solid var(--border);
-    border-radius: 4px;
-    padding: 12px;
+#map-panel {
     display: flex;
     flex-direction: column;
+    gap: 15px;
+}
+
+#data-sidebar {
+    display: flex;
+    flex-direction: column;
+    gap: 12px;
+    overflow-y: auto;
+    padding-right: 5px;
+}
+
+.canvas-container {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
     gap: 10px;
-    overflow: hidden;
+    height: 120px;
 }
 
-.panel h2 {
-    font-size: 0.7rem;
-    color: var(--accent);
-    text-transform: uppercase;
-    margin: 0 0 5px 0;
-    display: flex;
-    align-items: center;
-    gap: 8px;
-    border-bottom: 1px solid var(--border);
-    padding-bottom: 5px;
+.canvas-box {
+    background: #000;
+    border: 1px solid var(--border);
+    position: relative;
 }
 
-/* --- DATA POINTS (LIGNES DE DONNÉES) --- */
-.data-point {
-    display: flex;
-    justify-content: space-between;
-    font-size: 0.8rem;
-    padding: 4px 0;
-    border-bottom: 1px solid rgba(255,255,255,0.05);
-}
+canvas { width: 100%; height: 100%; }
 
-.data-point span:first-child {
-    color: #888;
-}
-
-.data-point span:last-child {
-    font-family: 'JetBrains Mono', monospace;
-    color: var(--text);
-}
+@media (max-width: 1000px) {
+    main { grid-template-columns: 1fr; overflow-y: auto; }
+    }
 
 /* --- CONTENEURS GRAPHIQUES --- */
 .canvas-box {
@@ -264,7 +257,6 @@ header#master-hud-fixed {
 </header>
     
 <main>
-        <div class="column">
         <section class="panel">
             <h2><i class="fas fa-cog"></i> Système & Contrôles, Synchronisation Éphémérides</h2>
                 <div class="data-point"><span>Date & Heure (UTC/GMT)</span><span id="utc-datetime">--</span></div>
@@ -635,7 +627,7 @@ header#master-hud-fixed {
 
             <div class="treasure-log-container" style="margin-top: 12px; border-top: 1px solid var(--border); padding-top: 8px;">
                 <h2><i class="fas fa-history"></i> Journal de Bord</h2>
-                <div id="anomaly-log" style="height:120px; overflow-y:auto; font-size:0.7rem; background: rgba(0,0,0,0.3); padding: 5px; font-family: 'JetBrains Mono', monospace;">
+                <div id="anomaly-log" style="height:150px; border:1px solid var(--border); overflow-y:auto; font-size:0.7rem; padding:5px; background:rgba(0,0,0,0.5);"></div>
                     <span style="color: #444;">[SYSTEM] Initialisation du noyau...</span>
                 </div>
             </div>
