--- a/index.html
+++ b/index.html
@@ -7,9 +7,6 @@
     
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="leaflet.css" />
-    <link rel="stylesheet" href="fontawesome.min.css" />
-    <link rel="manifest" href="manifest.json">
-<style>  
 <style>
     :root {
         --bg: #030303; --card: #0a0a0c; --border: #1a1a1f;
@@ -17,48 +14,59 @@
     }
     body {
         background: var(--bg); color: var(--text); margin: 0;
-        font-family: 'JetBrains Mono', 'Segoe UI', monospace;
+        font-family: 'JetBrains Mono', monospace;
         overflow: hidden; font-variant-numeric: tabular-nums;
     }
 
-    /* LAYOUT TRIPLE COLONNE TOTAL DISPLAY */
+    /* GRID TRIPLE COLONNE SANS DÉBORDEMENT */
     main {
         display: grid;
-        grid-template-columns: 1fr 1fr 1fr; /* 3 colonnes égales pour un tableau massif */
-        height: calc(100vh - 40px);
-        gap: 5px; padding: 5px; box-sizing: border-box;
+        grid-template-columns: repeat(3, 1fr);
+        height: calc(100vh - 50px);
+        gap: 6px; padding: 6px; box-sizing: border-box;
     }
 
-    .column { display: flex; flex-direction: column; gap: 5px; height: 100%; overflow: hidden; }
-
-    /* PANNEAU SCIENTIFIQUE */
-    .panel { 
-        background: var(--card); border: 1px solid var(--border); 
-        padding: 6px; border-radius: 1px; flex-shrink: 0;
-    }
-    .panel h2 { 
-        font-size: 0.6rem; color: #555; margin: 0 0 4px 0; 
-        border-bottom: 1px solid #1a1a1a; text-transform: uppercase; 
+    .column {
+        display: flex;
+        flex-direction: column;
+        gap: 6px;
+        height: 100%;
+        min-width: 0; /* Important pour empêcher l'élargissement forcé */
     }
 
-    /* DONNÉES ET NOTATION SCIENTIFIQUE */
-    .data-point { 
-        display: flex; justify-content: space-between; 
-        font-size: 0.65rem; line-height: 1.2; border-bottom: 1px solid #0d0d0d;
+    /* PANNEAUX DENSES */
+    .panel {
+        background: var(--card);
+        border: 1px solid var(--border);
+        padding: 8px;
+        border-radius: 2px;
+        flex-shrink: 0;
     }
+
+    .panel h2 {
+        font-size: 0.6rem; color: var(--accent);
+        margin: 0 0 6px 0; border-bottom: 1px solid #1a1a1a;
+        display: flex; align-items: center; gap: 5px; text-transform: uppercase;
+    }
+
+    /* AFFICHAGE DES DONNÉES */
+    .data-point {
+        display: flex; justify-content: space-between;
+        font-size: 0.65rem; padding: 1px 0; border-bottom: 1px solid #0d0d0d;
+    }
+
     .val-scientifique {
-        color: var(--accent); font-weight: bold;
+        color: #fff; font-weight: bold;
         white-space: nowrap; overflow: hidden; text-overflow: ellipsis;
-        max-width: 150px; text-align: right;
+        max-width: 140px; text-align: right;
     }
 
-    /* CANVAS ADAPTATIFS */
-    .canvas-container { height: 60px; background: #000; border: 1px solid #111; position: relative; }
-    canvas { width: 100%; height: 100%; }
+    #map-container { flex: 1; min-height: 250px; background: #000; border: 1px solid var(--border); position: relative; }
+    #map { height: 100%; width: 100%; }
 
-    #anomaly-log { 
-        flex: 1; font-size: 0.55rem; color: #00ff00; background: #000; 
-        padding: 4px; overflow-y: auto; border: 1px solid #111;
+    #anomaly-log {
+        flex: 1; font-size: 0.55rem; color: #00ff00; background: #000;
+        padding: 5px; overflow-y: auto; border: 1px solid #111;
     }
 </style>
 </head>
@@ -92,10 +100,14 @@
     
 <main>
     <div class="column">
-        <section class="panel" style="flex: 2; display: flex; flex-direction: column;">
-            <h2><i class="fas fa-map"></i> NAVIGATION_MAP</h2>
-            <div id="map-container" style="flex: 1; min-height: 200px; position: relative;">
-                <div id="map" style="height: 100%;"></div>
+        <section class="panel" style="flex: 1; display: flex; flex-direction: column;" aria-labelledby="head-nav">
+            <h2 id="head-nav"><i class="fas fa-map-marked-alt"></i> Cartographie GNSS</h2>
+            <div id="map-container">
+                <div id="map"></div>
+                <div style="position: absolute; top: 5px; left: 5px; z-index: 1000; display: flex; gap: 4px;">
+                    <button id="toggle-globe-btn" class="btn-hud">GLOBE</button>
+                    <button id="xray-button" class="btn-hud">X-RAY</button>
+                </div>
             </div>
         </section>
 
@@ -488,6 +500,16 @@
     <script src="gnss-dashboard-full.js"></script>
 
     <script>
+    // Formateur universel pour affichage scientifique auto
+function formatVal(value, prec = 6) {
+    const n = Number(value);
+    if (isNaN(n)) return "--";
+    // Si le nombre est minuscule (Relativité) ou immense (Reynolds), mode scientifique
+    if (Math.abs(n) < 0.001 || Math.abs(n) > 999999) {
+        return n.toExponential(prec);
+    }
+    return n.toLocaleString('fr-FR', { maximumFractionDigits: prec });
+        }    
     /**
      * LOGIQUE DE CONTRÔLE DE MISSION V17
      */
